@@ -7,6 +7,7 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.36.0'
   id 'org.sonarqube' version '3.0'
   id 'uk.gov.hmcts.java' version '0.11.0'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.22'
 }
 
 allprojects {
@@ -14,14 +15,24 @@ allprojects {
   targetCompatibility = '11'
 }
 
+configurations {
+  providedRuntime
+  annotationProcessor
+  aatCompile.extendsFrom(testCompile)
+  aatRuntime.extendsFrom(testRuntime)
+  cucumberRuntime.extendsFrom(functionalRuntime)
+}
+
 sourceSets {
-  functionalTest {
+  aat {
     java {
+      srcDir('src/aat/java')
       compileClasspath += main.output
       runtimeClasspath += main.output
-      srcDir file('src/functionalTest/java')
     }
-    resources.srcDir file('src/functionalTest/resources')
+    resources {
+      srcDir('src/aat/resources')
+    }
   }
 
   integrationTest {
@@ -56,14 +67,47 @@ tasks.withType(Test) {
 }
 
 test {
+  generateCucumberReports.enabled = false
   failFast = true
 }
 
 task functional(type: Test) {
-  description = "Runs functional tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
+  description = 'Executes functional tests against an the CCD Message Publisher API instance just deployed'
+  dependsOn aatClasses
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/aat/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  doFirst {
+    generateCucumberReports.enabled = true
+    javaexec {
+      main = "uk.gov.hmcts.ccd.messagepublisher.befta.MessagePublisherBeftaMain"
+      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = [
+        '--threads', '10',
+        '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--tags', 'not @Ignore',
+        '--glue', 'uk.gov.hmcts.befta.player',
+        '--glue', 'uk.gov.hmcts.ccd.messagepublisher.befta', 'src/aat/resources/features'
+      ]
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Functional Tests/"
+        new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))
+        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
+      }
+    }
+  }
+  outputs.upToDateWhen { false }
 }
 
 task integration(type: Test) {
@@ -76,9 +120,38 @@ task integration(type: Test) {
 }
 
 task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
+  description = 'Executes smoke tests against an the CCD Data Store API instance just deployed'
+  dependsOn aatClasses
+
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/aat/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  doLast {
+    generateCucumberReports.enabled = true
+    javaexec {
+      main = "uk.gov.hmcts.ccd.messagepublisher.befta.MessagePublisherBeftaMain"
+      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+      args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke and not @Ignore', '--glue',
+              'uk.gov.hmcts.befta.player', '--glue', "uk.gov.hmcts.ccd.messagepublisher.befta", 'src/aat/resources/features']
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Smoke Tests/"
+        new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))
+        logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
 }
 
 check.dependsOn integration
@@ -137,16 +210,26 @@ dependencyManagement {
   }
 }
 
+cucumberReports {
+  outputDir = file("${projectDir}/target/cucumber")
+  reports = files("${projectDir}/target/cucumber.json")
+  notFailingStatuses = ["skipped", "passed"]
+}
+
 repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
+  maven {
+    url "https://dl.bintray.com/hmcts/hmcts-maven"
+  }
 }
 
 def versions = [
   junit           : '5.7.0',
   junitPlatform   : '1.7.0',
   reformLogging   : '5.1.5',
+  junitVintageVersion : '5.5.2',
   springBoot      : springBoot.class.package.implementationVersion,
   springfoxSwagger: '2.9.2',
   testcontainers  : '1.15.1'
@@ -158,7 +241,8 @@ ext.libraries = [
     "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
     "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
     "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
+    "org.junit.vintage:junit-vintage-engine:${versions.junitVintageVersion}"
   ]
 ]
 
@@ -169,6 +253,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-activemq'
+
   implementation group: 'com.microsoft.azure', name: 'azure-servicebus-jms-spring-boot-starter', version: '2.3.5'
 
   implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.12.0'
@@ -191,11 +276,13 @@ dependencies {
 
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
   compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.0'
-
   compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.40'
   compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.40'
 
   runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
+
+  aatImplementation group: 'uk.gov.hmcts', name: 'befta-fw', version: '6.6.0-RDM-7165-2'
+  aatImplementation libraries.junit5
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -210,8 +297,6 @@ dependencies {
   integrationTestImplementation group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
   integrationTestImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: versions.testcontainers
   integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
-
-  functionalTestImplementation sourceSets.main.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
 }
